--- a/package.json
+++ b/package.json
@@ -3,15 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.4.2",
+    "axios": "^1.4.0",
     "bootstrap": "^5.2.3",
+    "datatables.net": "^1.13.4",
+    "datatables.net-bs4": "^1.13.4",
+    "jquery": "^3.7.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.4",
+    "react-data-table-component": "^7.5.3",
+    "react-devtools": "^4.27.7",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.10.0",
-    "react-scripts": "5.0.1",
+    "react-icons": "^4.8.0",
+    "react-router-dom": "^6.11.1",
+    "react-scripts": "^2.1.3",
+    "sweetalert2": "^11.4.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
